# sampleplayer

./: index.html  neumorphic-design.css
JUCESampler/: .gitignore  CMakeLists.txt  README.md  SamplerPlayer.jucer  build.bat  build.sh  run.bat  run.sh
JUCESampler/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
